[gd_scene load_steps=6 format=2]

[ext_resource path="res://Entities/Chest/Standard/Chest.gd" type="Script" id=1]
[ext_resource path="res://Entities/Chest/Sprites/Chest_CLOSED_C.png" type="Texture" id=2]
[ext_resource path="res://Entities/Chest/Sprites/Chest_OPENED_C.png" type="Texture" id=3]
[ext_resource path="res://Entities/Chest/Sprites/Chest_inside.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14, 7 )

[node name="Chest" type="Area2D"]
script = ExtResource( 1 )

[node name="CLOSED" type="Node2D" parent="."]
position = Vector2( 0, 7 )

[node name="Chest_CLOSED" type="Sprite" parent="CLOSED"]
position = Vector2( 0, -16 )
texture = ExtResource( 2 )

[node name="OPENED" type="Node2D" parent="."]
position = Vector2( 0, 7 )

[node name="Chest_OPENED" type="Sprite" parent="OPENED"]
position = Vector2( 0, -16 )
texture = ExtResource( 3 )

[node name="ChestItems_BKG" type="Sprite" parent="OPENED"]
position = Vector2( 0, -37 )
texture = ExtResource( 4 )

[node name="ItemsORIGIN" type="Node2D" parent="OPENED"]
position = Vector2( 0, -10 )

[node name="Position2D1" type="Position2D" parent="OPENED/ItemsORIGIN"]
position = Vector2( -24, -30 )

[node name="Position2D2" type="Position2D" parent="OPENED/ItemsORIGIN"]
position = Vector2( -8, -30 )

[node name="Position2D3" type="Position2D" parent="OPENED/ItemsORIGIN"]
position = Vector2( 8, -30 )

[node name="Position2D4" type="Position2D" parent="OPENED/ItemsORIGIN"]
position = Vector2( 24, -30 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
